added referencias and edited buttons to be transparent

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -94,3 +94,11 @@ footer {
 section {
     margin-top: 40px;
 }
+
+.btn {
+    background-color: transparent;
+}
+
+.black-font {
+    color: black;
+}
