edited a carrousel caption on the index and stuf

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -102,3 +102,12 @@ section {
 .black-font {
     color: black;
 }
+
+.special-home-buttons{
+    opacity: 0.8;"
+}
+/*
+.special-home-buttons:hover {
+    background: #fff;
+    color: #2E6DA4; 
+}*/
